...
            source={transparentLogo}
            style={styles.logo}
            contentFit="contain"
          />
        </View>

        <Text style={styles.title}>"Pishir"ga hush kelibsiz!</Text>
        <Text style={styles.subtitle}>Sizning Aqlli oshxona hamrohingiz!</Text>
      </View>

      <View style={styles.footer}>
        <TouchableOpacity
          style={styles.button}
...
