appId: com.abuzcoder.smartqozon
---
- launchApp:
    clearState: true
- assertVisible: "Aqlli Qozon"
- assertVisible: "Davom etish uchun telefon raqamingizni kiriting"
- tapOn:
    id: "phone-input" 
- inputText: "+998901234567"
- tapOn: "Keyingi qadam"
- assertVisible: "Oilangiz haqida ma'lumot bering"
- tapOn: "Kirish"
- assertVisible: "Pishir" 
